@@ -37,19 +37,25 @@
       <version>1.18.22</version>
     </dependency>
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <version>1.7.25</version>
-    </dependency>
-    <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>1.2.11</version>
     </dependency>
+    <!-- Lists.newArrayList(), Maps.newHashMap() -->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>30.0-jre</version>
+    </dependency>
+    <!-- 
+    https://mvnrepository.com/artifact/commons-io/commons-io 
+    FileUtils，主要是文件（夹）的操作
+    IOUtils，主要是底层的io操作
+    -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.13.0</version>
     </dependency>
   </dependencies>
 
@@ -63,6 +69,21 @@
           <source>17</source>
           <target>17</target>
           <compilerArgs>--enable-preview</compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.12.4</version>
+        <configuration>
+          <!--
+          pretest：每一个测试创建一个新进程，为每个测试创建新的JVM是单独测试的最彻底方式，但也是最慢的，不适合hudson上持续回归。
+          once：在一个进程中进行所有测试。once为默认设置，在Hudson上持续回归时建议使用默认设置。
+          always：在一个进程中并行的运行脚本，Junit4.7以上版本才可以使用，surefire的版本要在2.6以上提供这个功能，其中 threadCount：执行时，指定可分配的线程数量。只和参数parallel配合使用有效。默认：5。
+          -->
+          <!--<forkMode>pertest</forkMode>-->
+          <!-- 配置JVM参数 -->
+          <!--<argLine>-Xlog:gc</argLine>-->
         </configuration>
       </plugin>
     </plugins>
